--- a/npcs/pally_dumas.yaml
+++ b/npcs/pally_dumas.yaml
@@ -565,7 +565,7 @@ npc:
       Pally Dumas is one of the three Dumas Triplets, two girls and a boy that look to be about 7 years old. The girls are identical twins and the boy also bears a remarkable resemblance. However, in reality, the Triplets are 
       not even related. Sally is a Hexblood while while Allie is a changeling who has bonded with and taken on the appearence of Sally full time, and Pally is a Nezumi rat-folk that wears an almost permanent glamour that 
       makes him resemble his "siblings". The Triplets are counted among the many mysterious "cousins" of the Dumas Family and they seem to mostly thrive on creating chaos and discord for everyone around them. They each use their
-      many mgical talents to torment their prey du jour. They rarely kill their victims, but prefer to leave them terrified, paranoid and sometimes delusional.      
+      many magical talents to torment their prey du jour. They rarely kill their victims, but prefer to leave them terrified, paranoid and sometimes delusional.      
 
     #
     # Personality (or something like that):
