--- a/npcs/Races Classes and Subclasses/shaman_subclasses.yaml
+++ b/npcs/Races Classes and Subclasses/shaman_subclasses.yaml
@@ -29,7 +29,7 @@
                               
                               
                               
-  - title: Path of the Spirit Abilities
+  - title: Calling of the Spirit Abilities
   - abilities:
     - title: Spiritual Guide
     - content: You are bestowed a spirit guide to help you progress further. The spirit guide takes on the incorporeal form of your totem spirit. Starting when you choose this path at 3rd level, your Spirit Guide
