--- a/npcs/Races Classes and Subclasses/fighter_subclasses.yaml
+++ b/npcs/Races Classes and Subclasses/fighter_subclasses.yaml
@@ -743,7 +743,7 @@
   - title: Warlord Abilities
   - abilities: 
     - title: Opportunity Maker
-    - content: Your attacks creature openings for your allies. When you take the Attack action on your turn, you can forgo the use a bonus action to direct one of your companions to strike. When you do so, choose a 
+    - content: Your attacks create openings for your allies. When you take the Attack action on your turn, you can forgo the use a bonus action to direct one of your companions to strike. When you do so, choose a 
                friendly creature who can see or hear you and is within 5 feet of a creature you attacked this turn. That creature can immediately use its reaction to make one melee weapon attack. You may use this 
                ability a number of times equal to your Wisdom modifier (a minimum of once\ and you regain all expended uses of it when you finish a short or long rest.
     - title: Battlefield Adviser
