--- a/npcs/Races Classes and Subclasses/race_abilities.yaml
+++ b/npcs/Races Classes and Subclasses/race_abilities.yaml
@@ -1127,7 +1127,7 @@
     - content: You gain proficiency in the Stealth skill.
        
        
-  - title: Brown Bearkin Abilities
+  - title: Grizzly Bearkin Abilities
   - abilities: 
     - title: Keen Smell
     - content: You gain advantage on Wisdom (Perception) checks that rely on smell.
