--- a/npcs/Races Classes and Subclasses/ranger_subclasses.yaml
+++ b/npcs/Races Classes and Subclasses/ranger_subclasses.yaml
@@ -565,16 +565,14 @@
     - content: 4th                  5
     - content: 5th                  6
     - content: Divine Bolts can be used instead of regular ammunition, and are created when the spell slot is expended, but onty come into physical form when you load your ranged weapon or as part of the attack 
-               action. The damage die of a Divine Bolt is 1 d8 radiant. Once fired or otherwise unloaded, the Divine Bolt's energy will disappear at the end of your turn. Uses of Divine Bolt can be expended once
-               per attack to enhance existing ammunition. When used to enhance existing ammunition, declare the enhancement before making the attack roll. On a hit, add 1 d8 radiant damage on top of the weapon's 
+               action. The damage die of a Divine Bolt is 1d8 radiant. Once fired or otherwise unloaded, the Divine Bolt's energy will disappear at the end of your turn. Uses of Divine Bolt can be expended once
+               per attack to enhance existing ammunition. When used to enhance existing ammunition, declare the enhancement before making the attack roll. On a hit, add 1d8 radiant damage on top of the weapon's 
                regular damage. Hit or miss, the use of Divine Bolt is expended. Unspent uses of Divine Bolt are expended harmlessly at the end of a long rest.
-    - title: Channel Divinity
-    - content: When you take this archetype at 3rd leveL you gain the following two Channel Divinity options.
     - title: Channel Divinity - Hunters lnslincts
-    - content: When you make a stealth, perception, or investigation check, you can use your Channel Divinity to gain a+ 10 bonus to the roll You make this choice after you see the roll but before 
+    - content: When you make a stealth, perception, or investigation check, you can use your Channel Divinity to gain a+ 10 bonus to the roll. You make this choice after you see the roll but before 
                the DM says whether the roll succeeds or fails.
     - title: Channel Divinity - Predator
-    - content: Against a favored enemy, you can tum one missed attack into a hit, or a h it into a critical hit
+    - content: Against a favored enemy, you can turn one missed attack into a hit, or a hit into a critical hit
     - title: Pursuit
     - content: As an action, choose a target that you have seen after gaining the use of this feature. You can use Primeval Awareness to track this creature without expending a spell s lot, though when used this way treat 
                Primeval Awareness as if it had been cast using your highest available spell slot. When Primeval Awareness is used in this way, you can sense the target's direction, speed and vague proximity, though you do not
