--- a/npcs/Races Classes and Subclasses/monk subclasses.yaml
+++ b/npcs/Races Classes and Subclasses/monk subclasses.yaml
@@ -561,9 +561,9 @@
     - title: Enduring Focus
     - content: Your temporary hit points from your Gentle Retribution no longer end after one minute. Instead, they last until you finish a short or long test, or until you are incapacitated
     - title: Harmonious Defense
-    - content: While you have temporary hit points due to your Gentle Retribution, you gain a+ 1 bonus to AC. This bonus increases to +2 at 11th level
+    - content: While you have temporary hit points due to your Gentle Retribution, you gain a +1 bonus to AC. This bonus increases to +2 at 11th level
     - title: Mutual Rupture
-    - content: You can end your focus on the battle early to empower your own blows. When you hit a creature with a melee weapon auack while you have temporary hit poinrs from your Gentle Retribution, you can spend 1 
+    - content: You can end your focus on the battle early to empower your own blows. When you hit a creature with a melee weapon attack while you have temporary hit poinrs from your Gentle Retribution, you can spend 1 
                Ki point to remove any tempotary hit points you currently have to deal extra force damage on that weapon attack equal to the temporary hit points you just removed
     - title: Mastered Technique
     - content: Your Gentle Retribution now grants you temporary hit points equal to the triggering attack's damage. Also, as part of that reaction, you can make an unarmed strike against a creature within your 
