--- a/npcs/warsoc_thoron.yaml
+++ b/npcs/warsoc_thoron.yaml
@@ -331,8 +331,9 @@ npc:
     # Optional.  0 or more.
     #
     factions:
-    - id: city_watch
-      name: City Watch
+    - id: town_guard
+      name: The Town Guard
+      role: Deputy
 
 
     #
