--- a/npcs/Races Classes and Subclasses/bard subclasses.yaml
+++ b/npcs/Races Classes and Subclasses/bard subclasses.yaml
@@ -288,7 +288,7 @@
     - title: Fortunes Favor
     - content: A College of Chance bard's lnspiration dice work differently from the standard Inspiration dice. When using their inspiration, the player must roll 2 dice to beat a goal. The dice and goal start out as 
                d6s and 6 respectively, and both increase at certain levels. If they, roll equal to or higher than the goal they take the higher roll of the 2 dice, if they roll lower than the goal they take the lower 
-               roll. At 5th level the dice become d8s and the goal becomes 8. At lOth level the dice beoome dlOs and the goal becomes 10. At 15th level the dice become d12s and the goal becomes 12.
+               roll. At 5th level the dice become d8s and the goal becomes 8. At lOth level the dice become dlOs and the goal becomes 10. At 15th level the dice become d12s and the goal becomes 12.
     - title: Deaths Gambit
     - content: You gain the ability to cheat death. If you reach 3 failed Death Saves, you may roll one last save. If this roll is above 5 you return to life with 1 hit point. You regain this ability after a long rest.
     - title: High Roller
