--- a/npcs/Races Classes and Subclasses/rogue_subclasses.yaml
+++ b/npcs/Races Classes and Subclasses/rogue_subclasses.yaml
@@ -511,7 +511,7 @@
   - title: Freerunner Abilities
   - abilities: 
     - title: Sprint
-    - content: You can make use of your momentum to enhance your agility. Your speed increases by 10 feet if you spent all of your movement continuously last tum. You can only be affected by one instance of this speed increase
+    - content: You can make use of your momentum to enhance your agility. Your speed increases by 10 feet if you spent all of your movement continuously last turn. You can only be affected by one instance of this speed increase
                at a time. Additionally, you gain proficiency in the Acrobatics skill if you don't already have it. Your proficiency bonus is doubled for any ability check you make that uses this skilL
     - title: Swift Strike
     - content: You learn how to use your mobility to your advantage in combat and catch opponents off guard When you take the Dash action and move at least 20 feet towards a creature, you may use your Sneak Attack 
